# supabase-mcp-server

./: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  GLOBAL_RULES.md  PLANNING.md  README.md  SSH_QUICK_DEPLOY.md  TASK.md  docker-compose.mcp-only.yml  docker-compose.yml  pyproject.toml  requirements.txt
